...
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasksFragment">
    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.android.architecture.blueprints.todoapp.tasks.TasksFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_tasksFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
...
