...
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:checked="@{model.task.get().isCompleted}"
                        android:onClick="@{() -> model.onCompleteChanged(taskDetailComplete.isChecked())}"
                        android:paddingTop="1dp" />

                    <TextView
                        android:id="@+id/task_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/task_detail_complete"
                        android:paddingTop="1dp"
                        android:text="@{model.task.get().title}"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
...

                </RelativeLayout>
            </LinearLayout>
        </com.example.android.architecture.blueprints.todoapp.view.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> model.onClickEdit()}"
            android:src="@drawable/ic_edit"
            app:fabSize="normal"
...
