...
            android:layout_height="match_parent"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="@{model.tasks.isLoading()}" />

        <LinearLayout
            android:id="@+id/statistics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="@{!model.tasks.isLoading()}">

            <TextView
...
